ตกแต่งหน้าเว็บด้วย css

--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
             </div>
             <div>
                 <h4>รายจ่าย</h4>
-                <p id="money-minus" class="money minus">-฿150</p>
+                <p id="money-minus" class="money minus">฿150</p>
             </div>
         </div>
         <h3>ประวัตการทำธุรกรรม</h3>
         <ul id="list" class="list"> 
-            <li class="minus">ค่าซ่อมรม <span>฿400</span>
+            <li class="minus">ค่าซ่อมรถ <span>- ฿400</span>
                 <button class="delete-btn">x</button>
              </li>   
-            <li class="minus">เงินเดือน <span>฿28000</span>
-                <button class="delete-btn">x</button>
-             </li>   
+            <li class="plus">เงินเดือน <span>+ ฿28000</span>
+                <button class="delete-btn">x</button> 
+             </li>  
         </ul>
         <h3>เพิ่มธุรกรรม</h3>
         <form id="form">
