--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         </div>
         <h3>ประวัตการทำธุรกรรม</h3>
         <ul id="list" class="list"> 
-            <li class="minus">ค่าซ่อมรถ <span>- ฿400</span>
+            <!-- <li class="minus">ค่าซ่อมรถ <span>- ฿400</span>
                 <button class="delete-btn">x</button>
              </li>   
             <li class="plus">เงินเดือน <span>+ ฿28000</span>
                 <button class="delete-btn">x</button> 
-             </li>  
+             </li>   -->
         </ul>
         <h3>เพิ่มธุรกรรม</h3>
         <form id="form">
