function สำหรับเพิ่มธุรกรรม

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h3>เพิ่มธุรกรรม</h3>
         <form id="form">
             <div class="form-control">
-                <label for="text">รายการ</label>
+                <label for="text">ธุรกรรม</label>
                 <input type="text" name="" id="text" placeholder="ระบุรายการธุรกรรม">
             </div>
             <div>
